Distinguish between void (VTYPE_VOID) and null (VTYPE_EMPTY). bug 341364, r=bzbarsky sr=shaver